--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <h1 class="banner_taital">Secure a personal  <br>loan for yourself</h1>
           <p class="banner_text">Up To $50,000 Personal Loans Online</p>
           <div class="btn_main">
-            <div class="more_bt"><a href="./form.html">Form </a></div>
+            <div class="more_bt"><a href="./Newform.html">Form </a></div>
             <div class="contact_bt"><a href="#">Contact Us</a></div>
           </div>
         </div>
